--- a/src/components/unit/SubCategories.scss
+++ b/src/components/unit/SubCategories.scss
@@ -18,10 +18,15 @@
         display: flex;
         gap: 8px;
 
-        img {
-            width: 18px;
-            height: 18px;
-            object-fit: cover;
+        .unit-component-sub-categories__category-item--icon {
+            border-radius: 100%;
+            background-color: #222;
+            padding: 4px;
+            img {
+                width: 10px;
+                height: 10px;
+                object-fit: cover;
+            }
         }
 
         &.select {
