--- a/src/components/mypage/albums/EditAlbumSongs.scss
+++ b/src/components/mypage/albums/EditAlbumSongs.scss
@@ -41,9 +41,10 @@
         gap: 16px;
         margin-bottom: 16px;
         .edit-album-songs__tab__item{
-            border-radius: 12px 4px 12px 12px;
+            border-radius: 10px 2px 10px 10px;
+            border: 1px solid var(--Color-06, #888);
             background: var(--Color-03, #222);
-            height: 30px;
+            height: 34px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -53,12 +54,26 @@
             font-size: 14px;
             font-style: normal;
             transition: 0.3s;
+            position: relative;
+            &::after{
+                content: '';
+                position: absolute;
+                right: 2px;
+                top: 2px;
+                width: 4px;
+                height: 4px;
+                background: #888;
+                border-radius: 100%;
+            }
             &.active{
-                border-radius: 12px 4px 12px 12px;
                 background: #CF0;
+                border: 1px solid #CF0;
                 color: var(--Text-dark-title, #1A1A1A);
                 font-family: Orbitron500;
                 font-size: 14px;
+                &::after{
+                    background: #000;
+                }
             }
         }//edit-album-songs__tab__item--END--
     }//edit-album-songs__tab--END--
