--- a/src/styles/ChatBot.scss
+++ b/src/styles/ChatBot.scss
@@ -1,7 +1,7 @@
 // pages/ChatBot.scss
 
 // 색상 변수 설정 (필요에 따라 커스터마이징 가능)
-$background-dark: #0B0B0C;
+$background-dark: #0b0b0c;
 $foreground: #282828;
 $primary: #00aced; // 모던한 블루 계열
 $input-bg: #323232;
@@ -9,7 +9,6 @@ $text-color: #ffffff;
 $shadow-color: rgba(0, 0, 0, 0.3);
 
 .chatbot__background {
-
   .chatbot {
     height: 700px;
     width: 100%;
@@ -33,14 +32,15 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         font-weight: 600;
         color: $text-color;
         text-align: left;
-        color: var(--primary-base, #CF0);
+        color: var(--primary-base, #cf0);
         font-family: Orbitron400;
         font-size: 18px;
       }
     }
 
     &__messages {
-      background: url('../assets/images/chat-bot/chat-mob-bg.png') no-repeat left bottom;
+      background: url("../assets/images/chat-bot/chat-mob-bg.png") no-repeat
+        left bottom;
       flex: 1;
       padding: 20px;
       // background-color: $foreground;
@@ -62,25 +62,24 @@ $shadow-color: rgba(0, 0, 0, 0.3);
           // background-color: $primary;
           // color: $text-color;
           padding: 0px;
-          .message__content{
+          .message__content {
             display: flex;
             flex-direction: row-reverse;
             width: 100%;
             align-items: center;
             gap: 8px;
-            img{
+            img {
               width: 40px;
               height: 40px;
               border-radius: 100%;
             }
-            .message__content--text{
+            .message__content--text {
               border-radius: 8px;
-              background: #CF0;
-              color: #1A1A1A;
+              background: #cf0;
+              color: #1a1a1a;
               font-family: Inter400;
               font-size: 14px;
               padding: 12px;
-
             }
           }
         }
@@ -91,24 +90,23 @@ $shadow-color: rgba(0, 0, 0, 0.3);
           // border: 1px solid rgba(255, 255, 255, 0.2);
           // color: $text-color;
           padding: 0px;
-          .message__content{
+          .message__content {
             display: flex;
             width: 90%;
             align-items: center;
             gap: 8px;
-            img{
+            img {
               width: 40px;
               height: 40px;
               border-radius: 100%;
             }
-            .message__content--text{
+            .message__content--text {
               border-radius: 8px;
-              background: #1A1A1A;
-              color: #F1F1F1;
+              background: #1a1a1a;
+              color: #f1f1f1;
               font-family: Inter400;
               font-size: 14px;
               padding: 12px;
-
             }
           }
         }
@@ -121,8 +119,8 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       background-color: $background-dark;
       align-items: center;
       border-radius: 12px;
-      border: 1px solid var(--primary-base, #CF0);
-      background: var(--Dark-Color-01, #0B0B0C);
+      border: 1px solid var(--primary-base, #cf0);
+      background: var(--Dark-Color-01, #0b0b0c);
       input {
         flex: 1;
         // padding: 10px 12px;
@@ -172,7 +170,6 @@ $shadow-color: rgba(0, 0, 0, 0.3);
     }
   }
 
-
   .music__information {
     width: 100%;
     // max-width: 600px;
@@ -194,11 +191,10 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         &::before {
           border: 1px solid #fff;
           background: url("../assets/images/arrow_drop_down2.svg") center
-          no-repeat;
+            no-repeat;
           transform: translate(0, -50%) rotate(180deg);
         }
       }
-
     }
     &__header {
       text-align: left;
@@ -209,7 +205,7 @@ $shadow-color: rgba(0, 0, 0, 0.3);
       margin-bottom: 16px;
       position: relative;
       h2 {
-        color: var(--primary-base, #CF0);
+        color: var(--primary-base, #cf0);
         font-family: Orbitron400;
         font-size: 18px;
         font-style: normal;
@@ -241,18 +237,18 @@ $shadow-color: rgba(0, 0, 0, 0.3);
         font-weight: 500;
         color: $text-color;
       }
-      .music__information__lyric--text{
+      .music__information__lyric--text {
         border-radius: 12px;
-        background: var(--Color-02, #1A1A1A);
-        padding: 12px 8px; 
-        textarea{
+        background: var(--Color-02, #1a1a1a);
+        padding: 12px 8px;
+        textarea {
           height: 300px;
           resize: none;
         }
       }
-      textarea{
+      textarea {
         border-radius: 12px;
-        background: var(--Color-02, #1A1A1A);
+        background: var(--Color-02, #1a1a1a);
         height: 300px;
       }
       input,
@@ -328,8 +324,8 @@ $shadow-color: rgba(0, 0, 0, 0.3);
 .music__information__instrument,
 .music__information__gender,
 .music__information__tempo,
-.music__information__detail{
-  input{
+.music__information__detail {
+  input {
     width: 100%;
     padding: 0;
     border: none;
@@ -342,27 +338,28 @@ $shadow-color: rgba(0, 0, 0, 0.3);
   }
 }
 
-
-.music__information__tags,.music__information__story{
-  h3{
-    color: var(--Text-music-title, #F1F1F1);
+.music__information__tags,
+.music__information__story {
+  h3 {
+    color: var(--Text-music-title, #f1f1f1);
     font-family: Orbitron600;
-    font-size: 18px;
+    // font-size: 18px;
     font-style: normal;
     line-height: normal;
     margin-bottom: 8px;
   }
-  textarea{
+  textarea {
     max-height: 100px;
     resize: none;
   }
-  input,textarea{
-    color: var(--Text-music-title, #F1F1F1);
+  input,
+  textarea {
+    color: var(--Text-music-title, #f1f1f1);
     font-family: Inter500;
     font-size: 14px;
     font-style: normal;
     line-height: normal;
-    border:0;
+    border: 0;
     background: transparent;
     padding: 0;
     margin-bottom: 32px;
