--- a/src/styles/MyPage.scss
+++ b/src/styles/MyPage.scss
@@ -1,7 +1,7 @@
 .mypage {
     //   background-color: #242424;
     //   width: 964px;
-    min-height: 100vh;
+    // min-height: 100vh;
     width: 100%;
     margin: 0 auto;
     .mypage__profile {
